--- a/src/main/resources/hudson/plugins/dry/DryPublisher/config_de.properties
+++ b/src/main/resources/hudson/plugins/dry/DryPublisher/config_de.properties
@@ -1,6 +1,6 @@
-Duplicate\ code\ results=Dateiname CPD Ergebnisse
+Duplicate\ code\ results=Dateinamen
 description.pattern=Angabe einer <a href="{0}">ANT Fileset 'includes'</a> Anweisung, die \
-     den Pfad zu den erzeugten XML Dateien bestimmt, z.B. '**/cpd.xml' oder '**/simian.xml'. \
+     den Pfad zu den erzeugten Dateien bestimmt, z.B. '**/cpd.xml' oder '**/simian.xml'. \
      Als Ausgangsverzeichnis für diese Anweisung wird der <a href="ws/">Arbeitsbereich</a> verwendet. \
      Falls kein Wert eingetragen wird, dann wird die Vorgabe '**/cpd.xml' benutzt. Bitte darauf \
      achten, dass damit keine anderen Dateien ausgewählt werden, sonst schlägt das Einlesen fehl.
