--- a/src/main/resources/hudson/plugins/dry/DryPublisher/config_ja.properties
+++ b/src/main/resources/hudson/plugins/dry/DryPublisher/config_ja.properties
@@ -1,7 +1,7 @@
 description.pattern=\
- PMD(CPD)\u304C\u751F\u6210\u3059\u308BXML\u5F62\u5F0F\u306E\u30EC\u30DD\u30FC\u30C8\u30D5\u30A1\u30A4\u30EB\u3092\u3001\
-'**/cpd.xml'\u306E\u3088\u3046\u306BAnt\u306E<a href="{0}">Fileset 'includes'</a> \u5F62\u5F0F\u3067\u6307\u5B9A\u3057\u307E\u3059\u3002\
-fileset\u3067\u306E\u6307\u5B9A\u306F\u3001<a href="ws/">\u30EF\u30FC\u30AF\u30B9\u30DA\u30FC\u30B9\u306E\u30EB\u30FC\u30C8</a>\u3092\u57FA\u6E96\u3068\u3057\u307E\u3059\u3002\
-\u4F55\u3082\u6307\u5B9A\u3057\u306A\u3051\u308C\u3070\u3001'**/cpd.xml'\u3092\u5BFE\u8C61\u3068\u3057\u307E\u3059\u3002CPD\u306E\u30EC\u30DD\u30FC\u30C8\u3067\u306A\u3044\u30D5\u30A1\u30A4\u30EB\u3092\u542B\u3081\u306A\u3044\u3088\u3046\u306B\u3057\u3066\u304F\u3060\u3055\u3044\u3002
-Duplicate\ code\ results=\u96C6\u8A08\u3059\u308B\u30D5\u30A1\u30A4\u30EB
+ \u751f\u6210\u3055\u308c\u308bXML\u5f62\u5f0f\u306e\u30ec\u30dd\u30fc\u30c8\u30d5\u30a1\u30a4\u30eb\u3092\u3001\
+'**/cpd.xml' \u307e\u305f\u306f '**/simian.xml \u306e\u3088\u3046\u306bAnt\u306e<a href="{0}">Fileset 'includes'</a> \u5f62\u5f0f\u3067\u6307\u5b9a\u3057\u307e\u3059\u3002\
+fileset\u3067\u306e\u6307\u5b9a\u306f\u3001<a href="ws/">\u30ef\u30fc\u30af\u30b9\u30da\u30fc\u30b9\u306e\u30eb\u30fc\u30c8</a>\u3092\u57fa\u6e96\u3068\u3057\u307e\u3059\u3002\
+\u4f55\u3082\u6307\u5b9a\u3057\u306a\u3051\u308c\u3070\u3001'**/cpd.xml'\u3092\u5bfe\u8c61\u3068\u3057\u307e\u3059\u3002CPD\u306e\u30ec\u30dd\u30fc\u30c8\u3067\u306a\u3044\u30d5\u30a1\u30a4\u30eb\u3092\u542b\u3081\u306a\u3044\u3088\u3046\u306b\u3057\u3066\u304f\u3060\u3055\u3044\u3002
+Duplicate\ code\ results=\u96c6\u8a08\u3059\u308b\u30d5\u30a1\u30a4\u30eb
 
