--- a/src/main/resources/hudson/plugins/dry/Messages.properties
+++ b/src/main/resources/hudson/plugins/dry/Messages.properties
@@ -12,8 +12,8 @@ DRY.ResultAction.OneNewWarning=1 new warning
 DRY.ResultAction.MultipleNewWarnings={0} new warnings
 DRY.ResultAction.OneFixedWarning=1 fixed warning
 DRY.ResultAction.MultipleFixedWarnings={0} fixed warnings
-DRY.ResultAction.OneFile=from one analysis file.
-DRY.ResultAction.MultipleFiles=from {0} analysis files.
+DRY.ResultAction.OneFile=from one analysis.
+DRY.ResultAction.MultipleFiles=from {0} analyses.
 
 DRY.ResultAction.HealthReportNoItem=Duplicate code: no warnings found.
 DRY.ResultAction.HealthReportSingleItem=Duplicate code: one warning found.
