Pull up build result user interface to analysis-core.

--- a/src/main/resources/hudson/plugins/dry/Messages.properties
+++ b/src/main/resources/hudson/plugins/dry/Messages.properties
@@ -6,6 +6,7 @@ DRY.Warning.Type=Duplicate Code
 
 DRY.Trend.Name=Duplicate Code Trend
 
+DRY.ResultAction.Header=Duplicate Code Result
 DRY.ResultAction.OneWarning=1 warning
 DRY.ResultAction.MultipleWarnings={0} warnings
 DRY.ResultAction.OneNewWarning=1 new warning
