--- a/src/main/resources/hudson/plugins/dry/Messages_ja.properties
+++ b/src/main/resources/hudson/plugins/dry/Messages_ja.properties
@@ -4,6 +4,7 @@ DRY.ProjectAction.Name=\u91CD\u8907\u30B3\u30FC\u30C9
 
 DRY.Trend.Name=\u91CD\u8907\u30B3\u30FC\u30C9\u306E\u63A8\u79FB
 
+DRY.ResultAction.Header=\u91CD\u8907\u30B3\u30FC\u30C9
 DRY.ResultAction.NoWarningsSince=\u30D3\u30EB\u30C9{0}\u4EE5\u964D\u3001\u8B66\u544A\u306F\u3042\u308A\u307E\u305B\u3093\u3002
 DRY.ResultAction.OneHighScore=\u8B66\u544A0\u7D99\u7D9A\u4E2D: \u6628\u65E5\u304B\u3089\u91CD\u8907\u30B3\u30FC\u30C9\u306E\u8B66\u544A\u306F\u3042\u308A\u307E\u305B\u3093!
 DRY.ResultAction.MultipleHighScore=\u8B66\u544A0\u7D99\u7D9A\u4E2D: {0}\u65E5\u9593\u91CD\u8907\u30B3\u30FC\u30C9\u306E\u8B66\u544A\u306F\u3042\u308A\u307E\u305B\u3093!
