--- a/src/main/resources/hudson/plugins/dry/Messages_de.properties
+++ b/src/main/resources/hudson/plugins/dry/Messages_de.properties
@@ -6,6 +6,7 @@ DRY.Warning.Type=Duplizierter Quelltext
 
 DRY.Trend.Name=Duplizierter Quelltext Trend
 
+DRY.ResultAction.Header=Duplizierter Quelltext Ergebnis
 DRY.ResultAction.OneWarning=eine Warnung
 DRY.ResultAction.MultipleWarnings={0} Warnungen
 DRY.ResultAction.OneNewWarning=eine neue Warnung
