Added a new portlet that shows the warning totals as line graph.

--- a/src/main/resources/hudson/plugins/dry/Messages.properties
+++ b/src/main/resources/hudson/plugins/dry/Messages.properties
@@ -35,3 +35,4 @@ DRY.ValidationError.NormalThreshold=The threshold must be a positive integer les
 Portlet.WarningsTable=Duplicate code per project
 Portlet.WarningsPriorityGraph=Duplicate code trend graph (priority distribution)
 Portlet.WarningsNewVsFixedGraph=Duplicate code trend graph (new vs. fixed)
+Portlet.WarningsTotalsGraph=Duplicate code trend graph (totals)
