--- a/src/main/resources/hudson/plugins/dry/Messages_de.properties
+++ b/src/main/resources/hudson/plugins/dry/Messages_de.properties
@@ -35,3 +35,4 @@ DRY.ValidationError.NormalThreshold=Der Grenzwert muss eine ganze Zahl größer al
 Portlet.WarningsTable=Duplizierter Quelltext pro Projekt
 Portlet.WarningsPriorityGraph=Duplizierter Quelltext Trend Graph (Verteilung nach Priorität)
 Portlet.WarningsNewVsFixedGraph=Duplizierter Quelltext Trend Graph (Verhältnis von neu zu behoben)
+Portlet.WarningsTotalsGraph=Duplizierter Quelltext Trend Graph (Gesamtanzahl)
