[JENKINS-17187] Added a view column that shows # warnings.

--- a/src/main/resources/hudson/plugins/dry/Messages_de.properties
+++ b/src/main/resources/hudson/plugins/dry/Messages_de.properties
@@ -1,3 +1,6 @@
+DRY.Warnings.ColumnHeader=# Duplizierter Quelltext
+DRY.Warnings.Column=Anzahl duplizierter Stellen
+
 DRY.Publisher.Name=Veröffentliche die Ergebnisse des Suchlaufs nach dupliziertem Quelltext
 
 DRY.ProjectAction.Name=Duplizierter Quelltext
@@ -17,7 +20,7 @@ DRY.Detail.header=Duplizierter Quelltext
 DRY.FixedWarnings.Detail.header=Behobene Warnungen
 DRY.NewWarnings.Detail.header=Neue Warnungen
 
-DRY.Warning.Message={0} Zeilen duplizierter Sourcetext.
+DRY.Warning.Message={0} Zeilen duplizierter Quelltext.
 
 DRY.Duplications.Header=Dupliziert in:
 
