--- a/src/main/resources/hudson/plugins/dry/Messages.properties
+++ b/src/main/resources/hudson/plugins/dry/Messages.properties
@@ -1,3 +1,6 @@
+DRY.Warnings.ColumnHeader=# Duplicate Code
+DRY.Warnings.Column=Number of code duplications
+
 DRY.Publisher.Name=Publish duplicate code analysis results
 
 DRY.ProjectAction.Name=Duplicate Code
