[FIXED JENKINS-31421] Added a new graph that shows the number of duplicated lines.

--- a/src/main/resources/hudson/plugins/dry/Messages.properties
+++ b/src/main/resources/hudson/plugins/dry/Messages.properties
@@ -31,3 +31,5 @@ Portlet.WarningsTable=Duplicate code per project
 Portlet.WarningsPriorityGraph=Duplicate code trend graph (priority distribution)
 Portlet.WarningsNewVsFixedGraph=Duplicate code trend graph (new vs. fixed)
 Portlet.WarningsTotalsGraph=Duplicate code trend graph (totals)
+
+Trend_type_duplicated_lines=Total number of duplicated lines
