--- a/src/main/resources/hudson/plugins/dry/Messages_de.properties
+++ b/src/main/resources/hudson/plugins/dry/Messages_de.properties
@@ -31,3 +31,5 @@ Portlet.WarningsTable=Duplizierter Quelltext pro Projekt
 Portlet.WarningsPriorityGraph=Duplizierter Quelltext Trend Graph (Verteilung nach Priorität)
 Portlet.WarningsNewVsFixedGraph=Duplizierter Quelltext Trend Graph (Verhältnis von neu zu behoben)
 Portlet.WarningsTotalsGraph=Duplizierter Quelltext Trend Graph (Gesamtanzahl)
+
+Trend_type_duplicated_lines=Gesamtzahl an duplizierten Zeilen
