[JENKINS-31421] Make y-axis label configurable.

--- a/src/main/resources/hudson/plugins/dry/Messages_de.properties
+++ b/src/main/resources/hudson/plugins/dry/Messages_de.properties
@@ -32,4 +32,5 @@ Portlet.WarningsPriorityGraph=Duplizierter Quelltext Trend Graph (Verteilung nac
 Portlet.WarningsNewVsFixedGraph=Duplizierter Quelltext Trend Graph (Verhältnis von neu zu behoben)
 Portlet.WarningsTotalsGraph=Duplizierter Quelltext Trend Graph (Gesamtanzahl)
 
-Trend_type_duplicated_lines=Gesamtzahl an duplizierten Zeilen
+Trend.Type.duplicated.lines=Gesamtzahl an duplizierten Zeilen
+Trend.duplicated_lines.yAxisLabel=Zeilen
