Added author scanning for each publisher.

--- a/src/main/resources/hudson/plugins/dry/Messages.properties
+++ b/src/main/resources/hudson/plugins/dry/Messages.properties
@@ -31,6 +31,7 @@ Portlet.WarningsTable=Duplicate code per project
 Portlet.WarningsPriorityGraph=Duplicate code trend graph (priority distribution)
 Portlet.WarningsNewVsFixedGraph=Duplicate code trend graph (new vs. fixed)
 Portlet.WarningsTotalsGraph=Duplicate code trend graph (totals)
+Portlet.WarningsUserGraph=Duplicate code warnings (priority per author)
 
 Trend.Type.duplicated.lines=Total number of duplicated lines
 Trend.duplicated_lines.yAxisLabel=lines
