--- a/src/main/resources/hudson/plugins/dry/Messages_de.properties
+++ b/src/main/resources/hudson/plugins/dry/Messages_de.properties
@@ -31,6 +31,7 @@ Portlet.WarningsTable=Duplizierter Quelltext pro Projekt
 Portlet.WarningsPriorityGraph=Duplizierter Quelltext Trend Graph (Verteilung nach Priorität)
 Portlet.WarningsNewVsFixedGraph=Duplizierter Quelltext Trend Graph (Verhältnis von neu zu behoben)
 Portlet.WarningsTotalsGraph=Duplizierter Quelltext Trend Graph (Gesamtanzahl)
+Portlet.WarningsUserGraph=Duplizierter Quelltext (Verteilung nach Personen)
 
 Trend.Type.duplicated.lines=Gesamtzahl an duplizierten Zeilen
 Trend.duplicated_lines.yAxisLabel=Zeilen
