Mark all publishers and project as DEPRECATED.

--- a/src/main/resources/hudson/plugins/dry/Messages.properties
+++ b/src/main/resources/hudson/plugins/dry/Messages.properties
@@ -1,7 +1,6 @@
 DRY.Warnings.ColumnHeader=# Duplicate Code
 DRY.Warnings.Column=Number of code duplications
-
-DRY.Publisher.Name=Publish duplicate code analysis results
+DRY.Publisher.Name=[Deprecated] Publish duplicate code analysis results
 
 DRY.ProjectAction.Name=Duplicate Code
 
