--- a/src/main/resources/hudson/plugins/dry/Messages_de.properties
+++ b/src/main/resources/hudson/plugins/dry/Messages_de.properties
@@ -1,7 +1,6 @@
 DRY.Warnings.ColumnHeader=# Duplizierter Quelltext
 DRY.Warnings.Column=Anzahl duplizierter Stellen
-
-DRY.Publisher.Name=Veröffentliche die Ergebnisse des Suchlaufs nach dupliziertem Quelltext
+DRY.Publisher.Name=[Veraltet] Veröffentliche die Ergebnisse des Suchlaufs nach dupliziertem Quelltext
 
 DRY.ProjectAction.Name=Duplizierter Quelltext
 
